[WFLY-15445] Jakarta transformation