@@ -8,285 +8,15 @@
     </parent>
 
     <groupId>org.jboss.openjdk-orb</groupId>
-    <artifactId>openjdk-orb</artifactId>
+    <artifactId>openjdk-orb-parent</artifactId>
     <version>8.1.8.Final-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <description>JBoss repackaging of the OpenJDK ORB</description>
+    <packaging>pom</packaging>
 
-    <name>OpenJDK ORB</name>
+    <name>OpenJDK ORB: Parent Aggregator</name>
 
-    <licenses>
-        <license>
-            <name>gpl</name>
-            <url>http://openjdk.java.net/legal/gplv2+ce.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+    <modules>
+        <module>javax</module>
+        <module>jakarta</module>
+    </modules>
 
-    <scm>
-        <connection>scm:git:https://github.com/jboss/openjdk-orb.git</connection>
-        <developerConnection>scm:git:https://github.com/jboss/openjdk-orb.git</developerConnection>
-        <url>https://github.com/jboss/openjdk-orb</url>
-        <tag>HEAD</tag>
-  </scm>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <source.code.dir>src/share/classes</source.code.dir>
-        <generate.loggers.script>logutil/generate_loggers.sh</generate.loggers.script>
-        <version.idl.plugin>1.2.2</version.idl.plugin>
-        <!-- we only allow building on JDK8 otherwise build code doesn't run on jdk8-->
-        <jdk.min.version>(,8]</jdk.min.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.spec.javax.transaction</groupId>
-            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-            <version>1.0.0.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.openjdk-orb</groupId>
-            <artifactId>openjdk-orb-jdk9-supplement</artifactId>
-            <version>1.0.3.Final</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.openjdk-orb</groupId>
-            <artifactId>openjdk-orb-jdk9-supplement</artifactId>
-            <version>1.0.1.Final</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-            <classifier>sources</classifier>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>idlj-maven-plugin</artifactId>
-                <version>${version.idl.plugin}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <sourceDirectory>${source.code.dir}</sourceDirectory>
-                    <sources>
-                        <source>
-                            <excludes>
-                                <exclude>**/orb.idl</exclude>
-                                <exclude>**/corba.idl</exclude>
-                                <exclude>**/CORBAX.idl</exclude>
-                                <exclude>com/sun/tools/corba/**/*.idl</exclude>
-                            </excludes>
-                            <emitStubs>true</emitStubs>
-                            <emitSkeletons>true</emitSkeletons>
-                            <packagePrefixes>
-                                <packagePrefix>
-                                    <type>CosNaming</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>CSI</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>CSIIOP</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>Dynamic</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>DynamicAny</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>GSSUP</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>IOP</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>Messaging</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>PortableInterceptor</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>PortableServer</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>Security</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>SSLIOP</type>
-                                    <prefix>org.omg</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>activation</type>
-                                    <prefix>com.sun.corba.se.spi</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>GIOP</type>
-                                    <prefix>com.sun.corba.se.spi</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>messages</type>
-                                    <prefix>com.sun.corba.se.spi</prefix>
-                                </packagePrefix>
-                                <packagePrefix>
-                                    <type>PortableActivationIDL</type>
-                                    <prefix>com.sun.corba.se.spi</prefix>
-                                </packagePrefix>
-                            </packagePrefixes>
-                            <compatible>false</compatible>
-                            <defines>
-                                <define>
-                                    <symbol>CORBA3</symbol>
-                                </define>
-                            </defines>
-                            <additionalArguments>
-                                <additionalArgument>-corba</additionalArgument>
-                                <additionalArgument>3.0</additionalArgument>
-                            </additionalArguments>
-                        </source>
-                    </sources>
-                    <includeDirs>
-                        <includeDir>src/share/classes/org/omg/CORBA</includeDir>
-                        <includeDir>src/share/classes/org/omg/CSI</includeDir>
-                        <includeDir>src/share/classes/org/omg/IOP</includeDir>
-                        <includeDir>src/share/classes/org/omg/PortableServer</includeDir>
-                        <includeDir>src/share/classes/org/omg/PortableInterceptor</includeDir>
-                        <includeDir>src/share/classes/org/omg/Security</includeDir>
-                    </includeDirs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>${generate.loggers.script}</executable>
-                    <environmentVariables>
-                        <JAVA_HOME>${java.home}</JAVA_HOME>
-                        <BASE_DIR>${basedir}</BASE_DIR>
-                        <SOURCE_DIR>${basedir}/${source.code.dir}</SOURCE_DIR>
-                        <TARGET_DIR>${project.build.directory}</TARGET_DIR>
-                    </environmentVariables>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${source.code.dir}</source>
-                                <source>${project.build.directory}/generated-sources/idl</source>
-                                <source>${project.build.directory}/generated-sources/log</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgument>-J--add-modules=jdk.unsupported</compilerArgument>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-java9-supplement</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <includeGroupIds>org.jboss.openjdk-orb</includeGroupIds>
-                            <includeArtifactIds>openjdk-orb-jdk9-supplement,openjdk-orb-jdk9-supplement-sources</includeArtifactIds>
-                            <excludeTransitive>true</excludeTransitive>
-                            <includes>**/*.class,**/*.properties,**/*.java</includes>
-                            <outputDirectory>${project.build.directory}/generated-resources/META-INF/versions/9</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-          
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Multi-Release>true</Multi-Release>
-                        </manifestEntries>
-                    </archive>
-                    <excludes>**/*.java</excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <configuration>
-                    <excludes>**/*.class</excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-        <resources>
-            <resource>
-                <directory>${project.build.directory}/generated-sources/log</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>target/generated-resources</directory>
-                <filtering>false</filtering>
-            </resource>
-        </resources>
-    </build>
-    <profiles>
-        <profile>
-            <id>windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <properties>
-                <generate.loggers.script>logutil/generate_loggers.bat</generate.loggers.script>
-            </properties>
-        </profile>
-    </profiles>
 </project>
